--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -18,6 +18,7 @@ page{
 .slide-image{
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 .add{
   width: 95%;
@@ -25,6 +26,7 @@ page{
   /* background: white; */
   margin: 0 auto;
   margin-top: 25px;
+  margin-bottom: -15px;
   /* float: left; */
 }
 .xueshuAdd{
@@ -50,6 +52,7 @@ page{
 }
 .text{
   position: absolute;
+  font-size: 0.6em;
   left: 50%;
   top: 80%;
   transform: translate(-50%,-50%);
