--- a/miniprogram/pages/jingsai/jingsai.wxml
+++ b/miniprogram/pages/jingsai/jingsai.wxml
@@ -1,2 +1,33 @@
-<!--pages/jingsai/jingsai.wxml-->
-<text>pages/jingsai/jingsai.wxml</text>
+<view id="addType">
+  <view id="addTypeTitle"><text style="color:red">*</text>科研类别：</view>
+  <picker class="addpicker" bindchange="bindPickerChange" value="{{index}}" range="{{array}}">
+    <view class="picker">
+      {{array[index]}}
+    </view>
+    <image class="gengduo" src="../../images/xia.png"></image>
+  </picker>
+</view>
+<view wx:if="{{zhuanliisShow}}">
+  <view class="addTitle">
+  <view class="title"><text style="color:red">*</text>专利类别：</view>
+    <picker class="addpicker" bindchange="bindPickerChange2" value="{{index2}}" range="{{array2}}">
+      <view class="picker">
+        {{array2[index2]}}
+      </view>
+      <image class="gengduo" src="../../images/xia.png"></image>
+    </picker>
+  </view>
+  <view class="addTitle">
+    <view class="title"><text style="color:red">*</text>公开号：</view>
+    <input class="input" placeholder="请输入公开号" bindinput="publicInput"></input>
+  </view>
+</view>
+<view wx:if="{{!zhuanliisShow}}">
+  <view class="addTitle">
+    <view class="title"><text style="color:red">*</text>申请号：</view>
+    <input class="input" placeholder="请输入申请号" bindinput="applyInput"></input>
+  </view>
+</view>
+<button class="addBtn" bindtap="addBtn">
+  点击提交
+</button>
