--- a/miniprogram/pages/xueshu/xueshu.wxml
+++ b/miniprogram/pages/xueshu/xueshu.wxml
@@ -15,12 +15,12 @@
   <view class="title"><text style="color:red">*</text>期刊名称：</view>
   <input class="input" placeholder="请输入期刊名称" bindinput="nameInput"></input>
 </view>
-<view class="addTitle">
+<view class="addTitle" wx:if="{{cellShow}}">
   <view class="title"><text style="color:red">*</text>影响因子：</view>
   <input class="input" placeholder="请输入影响因子" bindinput="cellInput"></input>
 </view>
-<view class="addTitle">
-  <view class="title"><text style="color:red">*</text>所在分区：</view>
+<view class="addTitle" wx:if="{{jcrisShow}}">
+  <view class="title"><text style="color:red">*</text>所在分区(JCR)：</view>
   <picker class="addpicker" bindchange="bindPickerChange2" value="{{index2}}" range="{{array2}}">
     <view class="picker">
       {{array2[index2]}}
