--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -13,7 +13,7 @@
   </view>
   <view class="jingsaiAdd" bindtap="gojingsai">
   <image src="../../images/jingsai.png" class="addImg"></image>
-    <view class="text">添加科研成果</view>
+    <view class="text">添加知识产权成果</view>
   </view>
 </view>
 <view class="add">
@@ -23,6 +23,16 @@
   </view>
   <view class="jingsaiAdd" bindtap="goBiaozhang">
   <image src="../../images/bisai.png" class="addImg"></image>
-    <view class="text">添加竞赛或表彰</view>
+    <view class="text">添加竞赛奖励或荣誉表彰</view>
+  </view>
+</view>
+<view class="add">
+  <view class="xueshuAdd" bindtap="goXiangmu">
+    <image src="../../images/keyan.png" class="addImg"></image>
+    <view class="text">添加科研项目</view>
+  </view>
+  <view class="jingsaiAdd" bindtap="goKeyan">
+  <image src="../../images/keyan2.png" class="addImg"></image>
+    <view class="text">添加科研成果</view>
   </view>
 </view>
