--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -1,3 +1,96 @@
-page{
-  background: #eee
+.top-img{
+  width: 100%;
+  height: 200px;
+  background-color: #3e62ad;
+  border-radius: 0 0 20px 20px;
+}
+/* html{
+  background-color: #eee;
+} */
+.top-content{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  /* margin-bottom: 10px;
+  background-size: 100% 100%;
+  border-radius:50%; */
+}
+.top-content .user-avatar{
+  width: 70px;
+  height: 70px;
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  background-size: 100% 100%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.top-content .user-name{
+  color: #fff;
+}
+.list{
+  width: 95%;
+  background:white;
+  margin: 10px auto;
+  /* padding-bottom: 10px; */
+  border-radius: 5px;
+}
+.list .pay,.record,.wallet{
+  height: 50px;
+  font-size: 14px;
+  line-height: 50px;
+  border-bottom: 1px solid #ccc;
+  margin: 0 20px;
+  font-weight: lighter;
+}
+.about{
+  height: 50px;
+  font-size: 14px;
+  line-height: 50px;
+  /* border-bottom: 1px solid #ccc; */
+  margin: 0 20px;
+  position: relative;
+  font-weight: lighter
+}
+.img-bill{
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+  transform: translate(0,30%);
+  /* position: absolute; */
+  /* background-color: #99CC99; */
+}
+.img-record{
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+  transform: translate(0,30%);
+  /* background-color: #99CC99; */
+}
+.img-about{
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+  transform: translate(0,30%);
+  /* background-color: #99CC99; */
+}
+.img-wallet{
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+  transform: translate(0,30%);
+  /* background-color: #99CC99; */
+}
+.button{
+  position: absolute;
+  top: 0;
+  background: white;
+  margin-left: 30px;
+  font-size: 14px;
+  line-height: 50px;
+}
+.button::after {
+  border: none;
 }
