--- a/miniprogram/pages/bangding/bangding.wxss
+++ b/miniprogram/pages/bangding/bangding.wxss
@@ -1,24 +1,26 @@
 /* 开始 */
 page {
   height: 100%;
-  display: table;
+  /* display: table;  */
   background: #3e62ad;
+}
+.wrapper{
   width: 100%;
   overflow-x: hidden;
 }
-
 .auth {
-  margin-top: 0;
+  width: 320px;
+  margin: 0 auto;
   text-align: center;
-  display: table-cell;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  padding: 100rpx;
+  /* padding: 100rpx; */
+  margin-top: 50px;
   vertical-align: middle;
   position: relative;
-  overflow-x: hidden;
+ 
 }
 
 
@@ -26,7 +28,8 @@ page {
   display: inline-block;
   width: 100%;
   font-size: 18px;
-  margin: 0 0 60rpx;
+  margin:0 auto;
+  margin-top: 50px;
   color: white;
 }
 
@@ -73,6 +76,7 @@ page {
   left: 100%;
   border-radius: 90px;
   transform: translate(-40%,0);
+  z-index: -2;
 }
 .right2{
   width: 220px;
@@ -95,4 +99,24 @@ page {
   border-radius: 100px;
   transform: translate(-50%,-40%);
   z-index: -50;
+}
+.ipt{
+  margin-top: 60px;
+  text-align: center
+}
+input{
+  width: 320px;
+  background: white;
+  margin-top: 20px;
+  height: 50px;
+  border-radius: 20px;
+}
+button{
+  width: 320px;
+  background: #5a79b3;
+  color: white;
+  height: 50px;
+  border-radius: 20px;
+  margin-top: 40px;
+  border: 1px solid white;
 }
