--- a/miniprogram/pages/detail4/detail4.wxss
+++ b/miniprogram/pages/detail4/detail4.wxss
@@ -340,7 +340,7 @@
   width: 20px;
   height: 20px;
   border-radius: 10px;
-  background: red;
+  background: #cb3a56;
   position: absolute;
   top: 5px;
   left: 5px;
